--- a/src/规范.md
+++ b/src/规范.md
@@ -1,9 +1,9 @@
-### 响应码 aabbccdd
+### 响应码 a_bb_cc_dd
 
-1. dd：不同逻辑。—— 逻辑响应码
-2. cc：不同方法/参数。—— 方法响应码
-3. bb：不同类。—— 类响应码
-4. aa：类别
-    - 1bbccdd -> controller内部逻辑
-    - 2bbccdd -> 请求参数验证
-    - 3bbccdd -> ResponseInterception
+1. dd：不同逻辑。
+2. cc：不同方法/参数。
+3. bb：不同类。
+4. a：不同类型。
+    - 1 -> controller内部逻辑
+    - 2 -> controller请求参数验证
+    - 3 -> ResponseInterception
